added student notebook

--- a/spike_tutorial_answers.ipynb
+++ b/spike_tutorial_answers.ipynb
@@ -7,7 +7,7 @@
     "# Spike Tutorial\n",
     "## Data Description:\n",
     "\n",
-    "This data set is recorded from auditory cortex in an awake mouse. This was a VGAT-cre mouse that was injected with a FLEX-ChR2 virus, which encodes an excitatory opsin that will selectively express in VGAT cells in this mouse line. The idea here is that when you shine blue light on the injection site, inhibitory VGAT neurons (a pan-inhibitory neuronal marker) will activate, and this shut down most of the other neurons in the area.\n",
+    "This data set is recorded from auditory cortex in an awake mouse. This was a VGAT-cre mouse that was injected with a FLEX-ChR2 virus, which encodes an excitatory opsin that will selectively express in VGAT cells in this mouse line. The idea here is that when you shine blue light on the injection site, inhibitory VGAT neurons (VGAT is a pan-inhibitory neuronal marker) will activate, and through massive inhibition shut down most of the other neurons in the area.\n",
     "\n",
     "While there were several stimuli run during this recording, we will focus on only one of them: a set of dynamic random chord (DRC) stimuli which alternate between low and high contrast, interleaved with laser stimulation.\n",
     "\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "root = '_data'\n",
     "\n",
     "msgText = np.load(os.path.join(root,'messages','text.npy'))\n",
-    "msgSample = np.load(os.path.join(root,'messages','timestamps.npy'))"
+    "msgSample = np.load(os.path.join(root,'events','timestamps.npy'))"
    ]
   },
   {
@@ -1495,7 +1495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
