update to tut 2

--- a/spike_tutorial_2_answers.ipynb
+++ b/spike_tutorial_2_answers.ipynb
@@ -122,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x11ff1cc90>"
+       "<matplotlib.collections.PathCollection at 0x11cea04d0>"
       ]
      },
      "execution_count": 5,
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "Text(0, 0.5, 'FR (Hz)')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,16 +332,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15f3358d0>]"
+       "[<matplotlib.lines.Line2D at 0x11b0d8d90>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,13 +363,14 @@
     "supPSTH = allPSTH[:,:,dLaser<0]\n",
     "actPSTH = allPSTH[:,:,dLaser>0]\n",
     "\n",
-    "# get new means and plot\n",
+    "# get new means\n",
     "mSupOff = supPSTH[~I,:,:].mean(axis=2).mean(axis=0)\n",
     "mSupOn = supPSTH[I,:,:].mean(axis=2).mean(axis=0)\n",
     "\n",
     "mActOff = actPSTH[~I,:,:].mean(axis=2).mean(axis=0)\n",
     "mActOn = actPSTH[I,:,:].mean(axis=2).mean(axis=0)\n",
     "\n",
+    "# plot\n",
     "fig,ax = plt.subplots(1,2,figsize=(16,4))\n",
     "ax[0].plot(time,mSupOff,'k')\n",
     "ax[0].plot(time,mSupOn,'k:')\n",
@@ -404,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
